--- a/styles/style.css
+++ b/styles/style.css
@@ -100,8 +100,6 @@ li>a {
 }
 
 
-
-
 @media screen and (max-width:576px) {
 
     .nav-links,
@@ -115,4 +113,95 @@ li>a {
         width: 30px;
     }
 
+}
+
+
+
+
+
+
+
+
+
+
+.banner {
+    max-width: 1160px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    gap: 50px;
+}
+
+
+#empowering {
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 61px;
+    color: rgb(254, 163, 1);
+}
+
+#students,
+#age {
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 61px;
+    color: rgb(17, 17, 17);
+}
+
+
+#vision {
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 61px;
+    color: rgb(1, 172, 253);
+}
+
+
+.banner-description {
+    color: rgb(17, 17, 17);
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 25px;
+}
+
+.banner-btn {
+    padding: .625rem 3rem;
+    border-radius: 12px;
+    background: rgb(17, 17, 17);
+    color: rgb(255, 255, 255);
+    font-size: 1.25rem;
+    font-weight: 700;
+    line-height: 2rem;
+    font-family: Quicksand;
+}
+
+
+
+@media screen and (max-width: 576px) {
+    .banner {
+        flex-direction: column-reverse;
+        margin: .5rem 1rem 1rem 1rem;
+    }
+
+    .banner-info-container {
+        text-align: center;
+    }
+
+    .banner-img {
+        width: 100%;
+    }
+
+    #empowering,
+    #students,
+    #age,
+    #vision {
+        font-size: 2rem;
+        line-height: 40px;
+    }
+
+    .banner-description {
+        font-size: 14px;
+        font-weight: 500;
+    }
 }
