--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,11 @@
 }
 
 
+body {
+    margin: 0;
+}
+
+
 
 
 
@@ -110,6 +115,10 @@ li>a {
         display: block;
         width: 50px;
         font-size: 40px;
+    }
+
+    .nav-container {
+        border: 0.5px solid rgb(254, 163, 1);
     }
 
 }
@@ -402,27 +411,400 @@ li>a {
 
 .stories {
     background: url(../assets/bg.png), linear-gradient(0.00deg, rgba(254, 163, 1, 0.3), rgba(255, 255, 255, 0.3) 100%);
+    height: 1018px;
 }
 
 .story-title {
     text-align: center;
+    font-size: 46px;
+    font-weight: 700;
+    padding-bottom: 0;
 }
 
 .story-container {
     max-width: 1140px;
-    margin: 130px auto;
+    /* height: 630px; */
+    margin: 80px auto;
     display: flex;
     gap: 20px;
 }
 
 
+
 .main-story {
     max-width: 540px;
+    border-radius: 16px;
+    background: rgb(255, 255, 255);
 }
 
+.main-story img {
+    border-radius: 16px 16px 0px 0px;
+    background: url(), rgb(217, 217, 217);
+    z-index: 5;
+}
+
+
+
+.ms {
+    position: relative;
+}
+
+
+.main-story-date {
+    z-index: 10;
+    top: -24px;
+    left: 44px;
+    color: white;
+    border-radius: 48px;
+    height: 1rem;
+    width: 160px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px;
+    background: rgb(60, 216, 232);
+    font-size: 15.34px;
+    font-weight: 500;
+}
+
+.main-story-title p {
+    font-size: 24px;
+    font-weight: 700;
+    width: 400px;
+    margin-top: 10px;
+    padding-bottom: 16px;
+    padding-left: 44px;
+}
+
+.main-story-description {
+    color: rgb(102, 102, 102);
+    padding-left: 44px;
+    padding-right: 30px;
+    font-size: 15.34px;
+    font-weight: 500;
+    line-height: 28.76px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+
+
+
+
+
+
+
 .sub-story {
-    max-width: 601px;
+    /* max-width: 601px; */
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
+}
+
+.sub-story1,
+.sub-story2,
+.sub-story3,
+.sub-story4 {
+    border-radius: 16px;
+    background: rgb(255, 255, 255);
+    height: 300px;
+}
+
+.sub-story1 img,
+.sub-story2 img,
+.sub-story3 img,
+.sub-story4 img {
+    border-radius: 16px 16px 0px 0px;
+    background: url(), rgb(255, 255, 255);
+}
+
+.story-img,
+.story-img1 {
+    z-index: 5;
+}
+
+.ss,
+.ss1 {
+    position: relative;
+}
+
+.sub-story-date {
+    z-index: 10;
+    top: -24px;
+    left: 40px;
+    color: white;
+    border-radius: 47.93px;
+    height: 1rem;
+    width: 160px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px;
+    background: rgb(149, 178, 38);
+
+    font-size: 15.34px;
+    font-weight: 500;
+
+}
+
+.sub-story-date2 {
+    z-index: 10;
+    top: -24px;
+    left: 40px;
+    color: white;
+    border-radius: 48px;
+    width: 160px;
+    height: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px;
+    background: rgb(93, 88, 240);
+
+    font-size: 15.34px;
+    font-weight: 500;
+
+}
+
+.sub-story-description {
+    top: -50px;
+    color: rgb(0, 0, 0);
+    font-family: Quicksand;
+    font-size: 15.34px;
+    font-weight: 700;
+    line-height: 28.76px;
+    letter-spacing: 0%;
+
+    padding-left: 30px;
+    width: 213.99px;
+    height: 57.52px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+
+
+
+.story-btn-container {
+    text-align: center;
+}
+
+.story-btn a {
+    text-decoration: none;
+    color: white;
+}
+
+.story-btn {
+    width: 197px;
+    height: 50px;
+    font-family: Quicksand;
+    padding: 10px;
+    margin: 45px 0px;
+    border-radius: 12px;
+    background: rgb(17, 17, 17);
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-weight: 700;
+}
+
+
+
+
+@media screen and (max-width: 576px) {
+    .main-story {
+        display: none;
+    }
+
+    .sub-story {
+        margin: 0 auto;
+    }
+
+
+    .sub-story1,
+    .sub-story2,
+    .sub-story3,
+    .sub-story4 {
+
+        width: 50%;
+        position: relative;
+        width: 173.09px;
+        height: 179.59px;
+
+    }
+
+    .sub-story1 img,
+    .sub-story2 img,
+    .sub-story3 img,
+    .sub-story4 img {
+        width: 100%;
+    }
+
+    .sub-story-date,
+    .sub-story-date2 {
+        position: absolute;
+        width: 103.91px;
+        height: 12px;
+        left: 22.83px;
+        top: 93.96px;
+        border-radius: 28.54px;
+
+        font-size: 10px;
+        font-weight: 500;
+
+        padding: 10px;
+    }
+
+    .sub-story-description {
+        font-size: 11px;
+        font-weight: 700;
+        width: 107.92px;
+        height: 28.54px;
+        /* left: 0; */
+        /* top: 2.85px; */
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        /* padding-top: 20px; */
+        /* padding-bottom: ; */
+
+    }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer {
+    background: rgb(1, 172, 253);
+    height: 100%;
+    width: 100%;
+
+}
+
+.target {
+    padding: 5px;
+    font-size: 20px;
+    color: white;
+    background-color: red;
+}
+
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    max-width: 1140px;
+    margin: 0px auto;
+    justify-content: space-between;
+    padding: 200px;
+}
+
+.footer-logo-container {
+    display: flex;
+    align-items: center;
+    /* flex-direction: column; */
+    gap: 20px;
+    margin-left: 0;
+    color: white;
+
+    /* background-color: white; */
+}
+
+.f-logo {
+    /* background-color: white; */
+    fill: white;
+}
+
+.footer-info {
+    max-width: 400px;
+
+}
+
+
+.footer-title {
+    color: white;
+    font-size: 42.14px;
+    font-weight: 700;
+}
+
+.footer-description {
+    color: white;
+    font-size: 20px;
+    font-weight: 400;
+    margin: 0;
+}
+
+.footer-links-title {
+    color: white;
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.footer-link {
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+
+}
+
+.footer-media-title {
+    color: white;
+    font-size: 26px;
+    font-weight: 700;
+}
+
+
+.footer-links {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+}
+
+footer a {
+    text-decoration: none;
+}
+
+.footer-media-container .footer-media {
+    display: flex;
+    gap: 20px;
+    /* flex-direction: column; */
+}
+
+.footer-media {
+    padding-bottom: 60px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 576px) {
+    .footer {
+        flex-direction: column;
+        gap: 30px;
+        padding: 20px;
+    }
 }
