--- a/styles/style.css
+++ b/styles/style.css
@@ -364,9 +364,17 @@ li>a {
     font-size: 30px;
 }
 
-.pre-next-icon:hover {
+.left:hover,
+.right:hover {
     cursor: pointer;
+    font-size: 70px;
 }
+
+
+/* .pre-next-icon:hover {
+    cursor: pointer;
+    font-size: 40px;
+} */
 
 
 
@@ -374,7 +382,7 @@ li>a {
 
 @media screen and (max-width:576px) {
     .curriculum {
-        margin: 40px auto;
+        margin: 80px auto;
     }
 
     .c-title {
@@ -386,8 +394,16 @@ li>a {
     .curriculum-card-container {
         flex-direction: column;
         align-items: center;
-        gap: 20px;
+        gap: 10px;
+
     }
+
+    .curriculum-card {
+        width: 96%;
+        padding: 36px 28px 36px 28px;
+        margin: 10px auto;
+    }
+
 
     /* #previous,
     #next {
