--- a/styles/style.css
+++ b/styles/style.css
@@ -124,6 +124,7 @@ li>a {
 
     .nav-container {
         border: 0.5px solid rgb(254, 163, 1);
+        padding: 12px 16px;
     }
 
 }
@@ -235,7 +236,8 @@ li>a {
     background-position: center;
     max-width: 1160px;
     /* display: flex; */
-    margin: 130px auto;
+    margin: 80px auto;
+    margin-bottom: 130px;
     text-align: center;
 }
 
@@ -394,7 +396,7 @@ li>a {
     .curriculum-card-container {
         flex-direction: column;
         align-items: center;
-        gap: 10px;
+        gap: ;
 
     }
 
